LU-6635 lfsck: more debug message for sanity-lfsck test_18e

It is suspected that the wait_update() does not check the specified
system status per second.

Another suspected point is that the lfsck status has not been set
as phase2 by lfsck_post.

Signed-off-by: Fan Yong <fan.yong@intel.com>
Change-Id: Ieb862bce067e21673bc025b709e50a0e15309b9c
Reviewed-on: http://review.whamcloud.com/17404
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>